[package]
name = "paleta"
version = "0.3.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
gtk4-macros = "0.6.0"
gdk-pixbuf = { version = "0.15", features = ["v2_36"] }
log = "0.4"
pretty_env_logger = "0.4"
rusqlite = { version = "0.28.0" }
html-escape = "0.2.12"
once_cell = "1.10"
color-thief = "0.2.1"
directories-next = "2.0.0"
xdg = "2.4.1"
regex = "1.7.1"
palette = "0.6.1"

[dependencies.gtk]
package = "gtk4"
version  = "0.6"

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_2"]