modulesubdir = join_paths(moduledir, 'pages')

pages_sources = [
    '__init__.py',
    'color_row.py',
    'drag_overlay.py',
    'image_drop.py',
    'image_thief_panel.py',
    'image.py',
    'palettes.py',
    'dialog_windows.py',
    'palette_card.py',
    'color_card.py',
]

install_data(pages_sources, install_dir: modulesubdir)