rust_sources += files(
    'mod.rs',
    'add_color_dialog.rs',
    'add_new_palette_dialog.rs',
    'delete_color_dialog.rs',
    'delete_palette_dialog.rs',
    'duplicate_palette_dialog.rs',
    'rename_palette_dialog.rs',
    'save_palette_dialog.rs',
    'simple_palette_row.rs',
    'simple_color_card.rs',
    'simpler_delete_color_card.rs',
)